--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -148,13 +148,12 @@ tfoot * {
 
 
 main {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: repeat(3, 300px);
+    display: inline-grid;
+    grid-template-rows: repeat(3, 200px);
     grid-auto-flow: column dense;
     align-items: center;
     width: 90%;
-    margin: 150px auto;
+    margin: 180px auto;
     padding: 20px;
     gap: 10px;
 }
@@ -231,7 +230,6 @@ button {
     height: 400px;
     box-shadow: inset 0 0 7px 1px gray;
     border-radius: 20px;
-    display: flex;
     background-color: white;
 }
 
