--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -149,31 +149,35 @@ tfoot * {
 
 main {
     display: inline-grid;
-    grid-template-rows: repeat(3, 200px);
+    grid-template-rows: repeat(3, 350px);
+    grid-template-columns: 1fr 1fr 1fr;
     grid-auto-flow: column dense;
-    align-items: center;
-    width: 90%;
-    margin: 180px auto;
-    padding: 20px;
-    gap: 10px;
+    align-items: start;
+    width: 100%;
+    margin: 110px auto;
+    padding: 30px;
+    gap: 100px;
 }
 
+
+
 #input-container {
-    display: flex;
-    flex-direction: column;
-    width: 300px;
+    display: grid;
+    background-color: khaki;
+    width: 600px;
     padding: 20px;
+    border: 2px solid #178473;
+    border-radius: 20px;
 }
 
 
 input {
     width: 100%;
-    height: 100%;
     border: 2px solid #178473;
     border-radius: 20px;
     background-color: white;
     display: flex;
-    align-items: center;
+    align-content: center;
     flex-direction: revert;
 }
 
@@ -212,17 +216,6 @@ button {
 .shaded:hover,
 .animated:hover {
     transition: 0.5s
-}
-
-#input-container {
-    display: flex;
-    align-content: flex-start;
-    width: 600px;
-    padding: 30px;
-    margin-left: -70px;
-    border-radius: 20px;
-    border: 2px solid #178473;
-    background-color: #ffe5b4;
 }
 
 #canvas-container {
@@ -311,13 +304,14 @@ hr {
     display: grid;
     grid-column-start: auto;
     grid-row: span 2;
-    width: 500px;
-    margin: 10px auto;
+    margin: 25px auto;
+    width: 100%;
 }
 
 #output-table td, #output-table th {
     padding: 15px;
     border: 1px solid #178473;
+    width: 100%;
 }
 
 .notifications {
@@ -329,13 +323,12 @@ hr {
 }
 
 #output-table th {
-    background-color: #178473;
-    color: white;
+    color: black;
+    background-color: khaki;
 }
 
 #output-table * {
-    background-color: #178473;
-    padding: 25px;
+    background-color: khaki;
 }
 
 #result-text {
