--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -143,7 +143,7 @@ thead * {
 tfoot * {
     margin-bottom: 4% !important;
     border: 5px solid #178473;
-    width: 500px;
+    width: 100%;
 }
 
 
@@ -224,8 +224,8 @@ button {
 }
 
 #canvas-container {
-    width: 400px;
-    height: 400px;
+    width: 100%;
+    height: 100%;
     box-shadow: inset 0 0 7px 1px gray;
     border-radius: 20px;
     background-color: white;
@@ -339,7 +339,7 @@ hr {
     display: none;
     color: white;
     border-radius: 20px;
-    width: 120px;
+    width: 100%;
 }
 
 #check-button {
