--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -5,7 +5,6 @@
 * {
     font-family: Courier New, sans-serif;
     text-align: center;
-    text-height: normal;
     box-sizing: border-box;
 }
 
@@ -149,7 +148,7 @@ tfoot * {
 
 main {
     display: grid;
-    grid-template-rows: repeat(3, 350px);
+    grid-template-rows: repeat(3, 0.75fr);
     grid-template-columns: 1fr 1fr 1fr;
     grid-auto-flow: column dense;
     align-items: start;
@@ -162,12 +161,16 @@ main {
 
 
 #input-container {
-    display: grid;
     background-color: khaki;
-    width: 600px;
+    width: 500px;
     padding: 20px;
     border: 2px solid #178473;
     border-radius: 20px;
+}
+
+#input-container:hover{
+    transition: .1s;
+    border: 4px solid #178473
 }
 
 
@@ -181,6 +184,7 @@ input {
     align-content: center;
     flex-direction: revert;
 }
+
 
 label{
     text-align: center;
@@ -223,24 +227,22 @@ button {
     transition: 0.5s
 }
 
-#canvas-container {
-    width: 100%;
-    height: 100%;
-    box-shadow: inset 0 0 7px 1px gray;
-    border-radius: 20px;
-    background-color: white;
-}
 
-canvas {
-    width: 100%;
-    height: 100%;
+#canvas-container {
+    width: 320px;
+    height: 320px;
     border: 2px solid #178473;
     border-radius: 20px;
     background-color: white;
 }
 
+#canvas-container:hover {
+    transition: .1s;
+    border: 4px solid #178473
+}
+
 .shaded:hover {
-    box-shadow: 0 0 10px 2px black
+    box-shadow: 0 0 2px 2px black
 }
 
 .animated:hover {
@@ -249,7 +251,7 @@ canvas {
 
 .illuminated:hover,
 .illuminated:focus {
-    box-shadow: 0 0 10px 10px #34E350;
+    box-shadow: 0 0 5px 5px forestgreen;
     outline: none;
 }
 
@@ -264,7 +266,6 @@ fieldset{
 }
 
 .r-input {
-    display: grid;
     width: 100%;
     grid-template-columns: repeat(5, 20%);
     align-items: center;
@@ -284,7 +285,7 @@ fieldset{
 }
 
 hr {
-    color: #34E350;
+    color: forestgreen;
     width: 90%;
 }
 
@@ -304,7 +305,6 @@ hr {
 #output-table {
     border: 5px solid #178473;
     border-collapse: collapse;
-    display: grid;
     grid-column-start: auto;
     grid-row-start: span 2;
     margin: 25px auto;
@@ -339,7 +339,14 @@ hr {
     display: none;
     color: white;
     border-radius: 20px;
+    text-align: center;
     width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+    main {
+        display: inline;
+    }
 }
 
 #check-button {
