--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -126,7 +126,7 @@ footer {
 
 header,
 footer {
-    background-color: #178473;
+    background-color: #FF7F50;
     color: white;
     width: 100%;
     position: fixed;
@@ -145,12 +145,11 @@ tfoot * {
     width: 100%;
 }
 
-
-main {
+.page {
     display: grid;
     grid-template-rows: repeat(3, 0.75fr);
     grid-template-columns: 1fr 1fr 1fr;
-    grid-auto-flow: column dense;
+    grid-auto-flow: column;
     align-items: start;
     width: 100%;
     margin: 110px auto;
@@ -229,12 +228,13 @@ button {
 
 
 #canvas-container {
-    width: 320px;
-    height: 320px;
+    width: 355px;
+    height: 355px;
     border: 2px solid #178473;
     border-radius: 20px;
     background-color: white;
 }
+
 
 #canvas-container:hover {
     transition: .1s;
@@ -344,7 +344,7 @@ hr {
 }
 
 @media screen and (max-width: 768px) {
-    main {
+    .page {
         display: inline;
     }
 }
