--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    background-image: url("images/ryan gosling.jpg");
+    background-color: peachpuff;
     background-repeat: no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -126,7 +126,7 @@ footer {
 
 header,
 footer {
-    background-color: #FF7F50;
+    background-color: #178473;
     color: white;
     width: 100%;
     position: fixed;
@@ -146,8 +146,6 @@ tfoot * {
 }
 
 .page {
-    display: flex;
-    flex-direction: row;
     width: 100%;
     margin: 110px auto;
     padding: 30px;
@@ -158,12 +156,15 @@ tfoot * {
 
 #input-container {
     background-color: khaki;
-    width: 60%;
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    text-align: center;
+    align-items: stretch;
+    justify-content: space-evenly;
     padding: 20px;
     border: 2px solid #178473;
     border-radius: 20px;
-    justify-self: flex-start;
-    align-self: stretch;
 }
 
 #input-container:hover{
@@ -178,18 +179,14 @@ input {
     margin: 5px;
     border-radius: 20px;
     background-color: white;
-    display: flex;
     align-content: center;
     flex-direction: revert;
 }
 
 
-label{
-    text-align: center;
-}
 
 input[type=radio] {
-    float: left;
+    float: revert;
     width: 50px;
 }
 
@@ -232,6 +229,8 @@ button {
     border: 2px solid #178473;
     border-radius: 20px;
     background-color: white;
+    justify-self: flex-start;
+    align-self: flex-start;
 }
 
 
@@ -266,9 +265,10 @@ fieldset{
 
 .r-input {
     width: 100%;
-    grid-template-columns: repeat(5, 20%);
+    grid-template-columns: repeat(5, 50px);
     align-items: center;
     border-collapse: collapse;
+    align-self: center;
     padding: 20px;
 }
 
@@ -338,8 +338,8 @@ hr {
     display: none;
     color: white;
     border-radius: 20px;
-    text-align: center;
-    width: 100%;
+    justify-content: center;
+    width: 70%;
 }
 
 @media screen and (max-width: 768px) {
